First update on correct repository
All other updates are on another repository that I had made before reading the homework description in depth.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
-<ul>
-	<li><a routerLink="/">User</a></li>
-	<li><a routerLink="/about">About</a></li>
-</ul>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<div class=right>	
+	
+		<a routerLink="/">Home</a>
+		<font> | </font>
+		<a routerLink="/about">About</a>
+	
+</div>
+
 
 <router-outlet>
 
