--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,16 +1,23 @@
-<p>
-  about works!
-</p>
-
-<form (submit)="addKeyword(hobby.value)">
+<!--<form (submit)="addKeyword(hobby.value)">
 	<div>
 		<label for="hobby">Hobby:</label>
 		<input type="text" #hobby>
 	</div>
-</form>
+</form>-->
 
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- <img src={{gettyImageUri}}> -->
 
-<img src={{gettyImageUri}}>
+<div class="center">
+    <img src={{giphyImageUrl}} alt="Insp" />
+</div>
 
-<img src={{giphyImageUrl}}>
+<!-- <table>
+	<tr>
+		<td align="left" valign="middle">
+		<img src={{giphyImageUrl}} align="left" border="0">
+		</td>
+	</tr>
+</table> -->
+<!-- <img src={{giphyImageUrl}}>  -->
